--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -173,11 +173,11 @@ body {
 
     .quotes {
       position: relative;
-      margin-bottom: -6px;
 
       img {
         width: 100%;
         filter: brightness(0.75);
+        margin:0;
       }
 
       .quotes-inner {
@@ -244,7 +244,6 @@ body {
     }
 
     footer {
-      margin-top: -5px;
       background-color: $accentBlue;
       color: $white;
       min-height: 180px;
